[package]
name = "tollbooth-backend"
version = "0.1.0"
authors = ["Kartikaya Gupta"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "0.2.13", features = ["rt-core", "sync", "macros"]}
reqwest = {version = "0.10.3", features = ["stream"]}
futures-util = "0.3.4"
